--- a/react-app/src/components/FeedPostCard.css
+++ b/react-app/src/components/FeedPostCard.css
@@ -141,7 +141,7 @@
 
 .feed-comment {
     margin-bottom: 5px;
-    width: 100%;
+    width: 80%;
     overflow-wrap: break-word;
 }
 
